<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/EnterServer"
        android:hint="@string/EnterServer" />

    <Button
        android:text="@string/ButtonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonOk"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp" />

    <EditText
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hint_foreground_material_light"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/InetPort"
        android:hint="@string/InetPort"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/login"
        android:ems="10"
        android:layout_below="@+id/EnterServer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/MQTTlogin" />

    <EditText
        android:layout_width="wrap_content"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/MQTTlogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/MQTTPassword" />
</RelativeLayout>